sites/05-sites-namespaces-pv-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site1
---
apiVersion: v1
kind: Namespace
metadata:
  name: site2
---
apiVersion: v1
kind: Namespace
metadata:
  name: site3
