sites/07-sites-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-site1
  namespace: site1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-site1
  template:
    metadata:
      labels:
        app: web-site1
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: web
          persistentVolumeClaim:
            claimName: pvc-nfs-site1
---
apiVersion: v1
kind: Service
metadata:
  name: web-site1
  namespace: site1
spec:
  selector:
    app: web-site1
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-site2
  namespace: site2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-site2
  template:
    metadata:
      labels:
        app: web-site2
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: web
          persistentVolumeClaim:
            claimName: pvc-nfs-site2
---
apiVersion: v1
kind: Service
metadata:
  name: web-site2
  namespace: site2
spec:
  selector:
    app: web-site2
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-site3
  namespace: site3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-site3
  template:
    metadata:
      labels:
        app: web-site3
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: web
          persistentVolumeClaim:
            claimName: pvc-nfs-site3
---
apiVersion: v1
kind: Service
metadata:
  name: web-site3
  namespace: site3
spec:
  selector:
    app: web-site3
  ports:
    - port: 80
      targetPort: 80
