sites/08-sites-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site1-ing
  namespace: site1
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - site1.celmediafidelizacion.cl
      secretName: tls-site1
  rules:
    - host: site1.celmediafidelizacion.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-site1
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site2-ing
  namespace: site2
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - site2.celmediafidelizacion.cl
      secretName: tls-site2
  rules:
    - host: site2.celmediafidelizacion.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-site2
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site3-ing
  namespace: site3
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - site3.celmediafidelizacion.cl
      secretName: tls-site3
  rules:
    - host: site3.celmediafidelizacion.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-site3
                port:
                  number: 80
